--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- 1 引入百度地图API的JS文件 -->
+    <script
+      type="text/javascript"
+      src="http://api.map.baidu.com/api?v=3.0&ak=Ql6g9FMhKC8AQhzbPG7erzSwCEAMmCCP"
+    ></script>
     <title>React 好客租房</title>
+    <!-- 百度地图API秘钥： Ql6g9FMhKC8AQhzbPG7erzSwCEAMmCCP -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
