--- a/public/index.html
+++ b/public/index.html
@@ -20,12 +20,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- 1 引入百度地图API的JS文件 -->
-    <script
-      type="text/javascript"
-      src="http://api.map.baidu.com/api?v=3.0&ak=Ql6g9FMhKC8AQhzbPG7erzSwCEAMmCCP"
-    ></script>
+    <script type="text/javascript" src="//api.map.baidu.com/api?type=webgl&v=1.0&ak=0CGkH9WUqQEyQ26dB2xBzGrmgc5NpBt0"></script>
     <title>React 好客租房</title>
-    <!-- 百度地图API秘钥： Ql6g9FMhKC8AQhzbPG7erzSwCEAMmCCP -->
+    <!-- 百度地图API秘钥： 0CGkH9WUqQEyQ26dB2xBzGrmgc5NpBt0 -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
